--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -118,9 +118,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="HZr-fa-VCF">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProgramCustomCell" rowHeight="162" id="jUX-MS-syf" customClass="ProgramCustomCell">
-                                <rect key="frame" x="0.0" y="22" width="375" height="162"/>
+                                <rect key="frame" x="0.0" y="66" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="jUX-MS-syf" id="lNf-ZQ-Zxo">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="161.5"/>
@@ -197,7 +202,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="searchDisplayController" destination="hoH-a0-k9U" id="xYG-Cs-2CA"/>
+                        <outlet property="searchDisplayController" destination="tYm-1Y-61Q" id="E9e-hz-PlE"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afA-Kn-raX" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -206,6 +211,14 @@
                         <outlet property="searchContentsController" destination="XMy-k7-mqo" id="8aJ-nV-dmt"/>
                         <outlet property="searchResultsDataSource" destination="XMy-k7-mqo" id="H6Y-wg-BWH"/>
                         <outlet property="searchResultsDelegate" destination="XMy-k7-mqo" id="m9z-4N-llf"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="tYm-1Y-61Q">
+                    <connections>
+                        <outlet property="delegate" destination="XMy-k7-mqo" id="0hc-j4-TC4"/>
+                        <outlet property="searchContentsController" destination="XMy-k7-mqo" id="9sP-P2-5UV"/>
+                        <outlet property="searchResultsDataSource" destination="XMy-k7-mqo" id="uBj-gc-8RY"/>
+                        <outlet property="searchResultsDelegate" destination="XMy-k7-mqo" id="msh-2A-Eh9"/>
                     </connections>
                 </searchDisplayController>
             </objects>
@@ -1475,7 +1488,7 @@
         <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="gkd-uM-QVZ"/>
         <segue reference="GuZ-nc-8YU"/>
+        <segue reference="G5x-3c-mw0"/>
     </inferredMetricsTieBreakers>
 </document>
